2002-06-06  Tim Coleman <tim@timcoleman.com>

	* providers/oracle/*: first working version of the Oracle provider
	for the new API.

2002-06-06  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.c: 
	(get_postgres_parent_tables): new function.

	* testing/postgres-test.c: added test SCHEMA_PARENT_TABLES.
	(execute_non_query): new function used for all the queries except
	SELECT.

2002-06-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.h: added PARENT_TABLES schema.

	* providers/mysql/gda-mysql-provider.c
	(gda_mysql_provider_change_database): implemented new class method.

2002-06-03  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-config.c: don't write mtime, muser.

2002-06-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-quark-list.[ch] (gda_quark_list_remove): new function.

	* libgda/gda-connection.c (gda_connection_new): remove entries
	we managed from the parameter list, so that providers dont' have
	to parse it again.

	* libgda/gda-server-provider.c (gda_server_provider_open_connection):
	likewise.

	* libgda/gda-client.c (gda_client_open_connection_from_string):
	new function. Fixes #81592.

2002-06-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: check for all providers unless --without-* arguments
	are used.

	* libgda/gda-server-provider.[ch]: added change_database virtual
	method to GdaServerProvider class.
	(gda_server_provider_change_database): new function.

	* libgda/gda-connection.[ch] (gda_connection_change_database): new
	function.

	* doc/C/libgda-docs.sgml: added reference to new virtual method to
	be implemented for providers.

	* providers/oracle/gda-oracle-connection.[ch]: compilation fixes.

2002-06-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.[ch]:
	* libgda/gda-server-provider.[ch]:
	* providers/mysql/gda-mysql-provider.c:
	* providers/sqlite/gda-sqlite-provider.c:
	* providers/default/gda-default-provider.c: