@@ -29,6 +29,9 @@
 
 G_BEGIN_DECLS
 
+#define gda_value_get_type(value) (value->type)
+#define gda_value_isa(value,type) (gda_value_get_type (value) == type)
+
 #define TIMEZONE_INVALID (2*12*60*60)
 
 typedef enum {
@@ -129,7 +132,6 @@ GdaValue     *gda_value_new_from_string (const gchar *as_string,
 
 void          gda_value_free (GdaValue *value);
 
-gboolean      gda_value_isa (const GdaValue *value, GdaValueType type);
 gboolean      gda_value_is_null (GdaValue *value);
 GdaValue     *gda_value_copy (const GdaValue *value);
 
